# user-service

./: Cargo.toml  docker-compose.yaml  makefile
migrations/: 20230119085935_users.sql
src/: errors.rs  main.rs
src/handler/: mod.rs  user.rs
src/model/: mod.rs  request.rs  response.rs  user.rs
src/routes/: mod.rs  sse.rs  user.rs
src/service/: mod.rs  user_service.rs
