[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.91"}
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }