[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.91"}
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.6.2", features = ["postgres", "offline", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
async-trait = "0.1.62"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.16"
thiserror = "1.0.38"
